# dashboards-python-dash

./: Dockerfile  README.md  pyproject.toml  requirements.txt
dash-t2/: app.py  requirements.txt
dash-t2/components/: callbacks.py  callbacks_old.py  data.py  data_processing.ipynb  data_processing.py  figures.py  layout.py  mock_data.py  pie.py  processamento.py  settings.py
dash-t2/components/assets/: mapa_brasil_none.html
docs/: app.md  callbacks.md  layout.md  processamento.md
