[tool.poetry]
name = "dash-t2"
version = "0.1.0"
description = "Dashboard Trabalho 2"
authors = ["Wagner da Costa Oliveira <wagner.costa.oliveira@gmail.com>"]
license = "GLP3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
dash-bootstrap-templates = "^1.3.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
dash-iconify = "^0.1.2"
dash-table = "^5.0.0"
pandas = "^2.2.3"
pydantic-settings = "^2.7.1"
dash-mantine-components = "^0.15.1"
dash-ag-grid = "^31.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
